--- a/models/CDLauncher.fxml
+++ b/models/CDLauncher.fxml
@@ -5,8 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="298.0" prefWidth="348.0" style="-fx-background-color: #413E3E;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="357.0" prefWidth="371.0" style="-fx-background-color: #413E3E;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="29.0" layoutY="99.0" style="-fx-text-fill: #DCDCDC;" text="Deck type">
          <font>
@@ -26,22 +25,22 @@
             <Font name="Verdana" size="13.0" />
          </font>
       </RadioButton>
-      <CheckBox layoutX="96.0" layoutY="141.0" mnemonicParsing="false" style="-fx-text-fill: #DCDCDC;" text="Built-in audio speaker">
+      <CheckBox layoutX="96.0" layoutY="141.0" mnemonicParsing="false" style="-fx-text-fill: #909090;" text="Built-in audio speaker">
          <font>
             <Font name="Verdana" size="13.0" />
          </font>
       </CheckBox>
-      <CheckBox layoutX="101.0" layoutY="179.0" mnemonicParsing="false" style="-fx-text-fill: #DCDCDC;" text="Built-in microphone">
+      <CheckBox disable="true" layoutX="119.0" layoutY="208.0" mnemonicParsing="false" style="-fx-text-fill: #DCDCDC;" text="Built-in microphone">
          <font>
             <Font name="Verdana" size="13.0" />
          </font>
       </CheckBox>
-      <Button layoutX="101.0" layoutY="237.0" mnemonicParsing="false" text="Launch">
+      <Button layoutX="104.0" layoutY="289.0" mnemonicParsing="false" text="Launch">
          <font>
             <Font name="Verdana" size="13.0" />
          </font>
       </Button>
-      <Button layoutX="183.0" layoutY="237.0" mnemonicParsing="false" text="Cancel">
+      <Button layoutX="186.0" layoutY="289.0" mnemonicParsing="false" text="Cancel">
          <font>
             <Font name="Verdana" size="13.0" />
          </font>
@@ -51,5 +50,15 @@
             <Font name="Verdana" size="24.0" />
          </font>
       </Label>
+      <CheckBox layoutX="97.0" layoutY="174.0" mnemonicParsing="false" style="-fx-text-fill: #DCDCDC;" text="Audio recorder functinality">
+         <font>
+            <Font name="Verdana" size="13.0" />
+         </font>
+      </CheckBox>
+      <CheckBox layoutX="96.0" layoutY="240.0" mnemonicParsing="false" style="-fx-text-fill: #DCDCDC;" text="Auto reverse">
+         <font>
+            <Font name="Verdana" size="13.0" />
+         </font>
+      </CheckBox>
    </children>
 </Pane>
