--- a/models/singleCD.fxml
+++ b/models/singleCD.fxml
@@ -1,47 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane prefHeight="439.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="439.0" prefWidth="600.0" style="-fx-background-color: #525050;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane dividerPositions="0.5" layoutY="53.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="600.0">
         <items>
-          <AnchorPane>
+          <AnchorPane style="-fx-background-color: #909090;">
                <children>
                   <Button layoutX="126.0" layoutY="249.0" mnemonicParsing="false" text="Pause" />
                   <Button layoutX="66.0" layoutY="249.0" mnemonicParsing="false" text="Play" />
                   <Button layoutX="190.0" layoutY="249.0" mnemonicParsing="false" text="Stop" />
                   <Slider layoutX="77.0" layoutY="138.0" />
                   <Slider layoutX="77.0" layoutY="205.0" />
-                  <Label layoutX="88.0" layoutY="101.0" text="Audio speaker volume" />
-                  <Label layoutX="108.0" layoutY="182.0" text="Stereo balance" />
-                  <Label layoutX="111.0" layoutY="41.0" text="Audio player" />
-                  <Label layoutX="33.0" layoutY="137.0" text="min" />
-                  <Label layoutX="234.0" layoutY="137.0" text="max" />
-                  <Label layoutX="30.0" layoutY="204.0" text="min" />
-                  <Label layoutX="234.0" layoutY="204.0" text="max" />
-                  <Button layoutX="97.0" layoutY="285.0" mnemonicParsing="false" text="FF" />
-                  <Button layoutX="164.0" layoutY="285.0" mnemonicParsing="false" text="FR" />
+                  <Label layoutX="88.0" layoutY="101.0" style="-fx-text-fill: #DCDCDC;" text="Audio speaker volume">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="108.0" layoutY="182.0" style="-fx-text-fill: #DCDCDC;" text="Stereo balance">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="111.0" layoutY="41.0" style="-fx-text-fill: #DCDCDC;" text="Audio player">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="33.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;" text="min">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="234.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;" text="max">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="30.0" layoutY="204.0" style="-fx-text-fill: #DCDCDC;" text="min">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Label layoutX="234.0" layoutY="204.0" style="-fx-text-fill: #DCDCDC;" text="max">
+                     <font>
+                        <Font name="Verdana" size="13.0" />
+                     </font></Label>
+                  <Button layoutX="97.0" layoutY="285.0" mnemonicParsing="false" text="FR" />
+                  <Button layoutX="164.0" layoutY="285.0" mnemonicParsing="false" text="FF" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="367.0" prefWidth="287.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="367.0" prefWidth="287.0" style="-fx-background-color: #909090;">
                <children>
-                  <Label layoutX="109.0" layoutY="39.0" text="Audio recorder" />
-                  <Label layoutX="231.0" layoutY="206.0" text="max" />
-                  <Label layoutX="27.0" layoutY="206.0" text="min" />
-                  <Label layoutX="231.0" layoutY="139.0" text="max" />
-                  <Label layoutX="30.0" layoutY="139.0" text="min" />
-                  <Label layoutX="61.0" layoutY="181.0" text="Stereo balance of recorded audio" />
-                  <Label layoutX="85.0" layoutY="103.0" text="Recorded audio volume" />
+                  <Label layoutX="109.0" layoutY="39.0" style="-fx-text-fill: #DCDCDC;" text="Audio recorder">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="231.0" layoutY="206.0" style="-fx-text-fill: #DCDCDC;" text="max">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="27.0" layoutY="206.0" style="-fx-text-fill: #DCDCDC;" text="min">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="231.0" layoutY="139.0" style="-fx-text-fill: #DCDCDC;" text="max">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="30.0" layoutY="139.0" style="-fx-text-fill: #DCDCDC;" text="min">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="61.0" layoutY="181.0" style="-fx-text-fill: #DCDCDC;" text="Stereo balance of recorded audio">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
+                  <Label layoutX="85.0" layoutY="103.0" style="-fx-text-fill: #DCDCDC;" text="Recorded audio volume">
+                     <font>
+                        <Font size="13.0" />
+                     </font></Label>
                   <Slider layoutX="74.0" layoutY="207.0" />
                   <Slider layoutX="74.0" layoutY="140.0" />
-                  <Button layoutX="191.0" layoutY="248.0" mnemonicParsing="false" text="Stop" />
-                  <Button layoutX="67.0" layoutY="248.0" mnemonicParsing="false" text="Start" />
-                  <Button layoutX="127.0" layoutY="248.0" mnemonicParsing="false" text="Pause" />
+                  <Button layoutX="99.0" layoutY="251.0" mnemonicParsing="false" text="Start Recording" />
                </children>
             </AnchorPane>
         </items>
@@ -49,20 +89,26 @@
       <Pane layoutX="12.0" layoutY="20.0">
          <children>
             <Button mnemonicParsing="false" text="Power" />
-            <Label layoutX="419.0" layoutY="4.0" text="Cassette" />
+            <Label layoutX="409.0" layoutY="3.0" style="-fx-text-fill: #DCDCDC;" text="Cassette">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <Button layoutX="49.0" mnemonicParsing="false" text="Eject" />
             <Button layoutX="471.0" mnemonicParsing="false" text="Insert" />
             <Button layoutX="517.0" mnemonicParsing="false" text="Remove" />
          </children>
       </Pane>
-      <Pane layoutX="14.0" layoutY="378.0">
+      <Pane layoutX="14.0" layoutY="378.0" prefHeight="45.0" prefWidth="566.0">
          <children>
-            <ProgressIndicator layoutX="468.0" layoutY="5.0" progress="0.0" />
-            <RadioButton disable="true" layoutY="17.0" mnemonicParsing="false" text="Magnetic head" />
-            <Label layoutX="410.0" layoutY="14.0" text="Counter" />
-            <RadioButton disable="true" layoutX="114.0" layoutY="17.0" mnemonicParsing="false" text="Motor" />
+            <ProgressIndicator layoutX="468.0" layoutY="5.0" progress="0.0" style="-fx-text-fill: DCDCDC;" />
+            <RadioButton disable="true" layoutY="17.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head" />
+            <Label layoutX="410.0" layoutY="14.0" style="-fx-text-fill: #DCDCDC;" text="Counter">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
+            <RadioButton disable="true" layoutX="114.0" layoutY="17.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Motor" />
+            <Button layoutX="507.0" layoutY="13.0" mnemonicParsing="false" text="Reset" />
          </children>
       </Pane>
-      <Button layoutX="525.0" layoutY="388.0" mnemonicParsing="false" text="Reset" />
    </children>
 </Pane>
