--- a/implementation/workspace/cassette-deck/src/main/resources/singleCD.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleCD.fxml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane prefHeight="439.0" prefWidth="600.0" style="-fx-background-color: #525050;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="434.0" prefWidth="600.0" style="-fx-background-color: #525050;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <SplitPane dividerPositions="0.5" layoutY="53.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="600.0">
+      <SplitPane dividerPositions="0.5" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="600.0">
         <items>
           <AnchorPane style="-fx-background-color: #909090;">
                <children>
-                  <Button layoutX="126.0" layoutY="249.0" mnemonicParsing="false" text="Pause" />
-                  <Button layoutX="66.0" layoutY="249.0" mnemonicParsing="false" text="Play" />
-                  <Button layoutX="190.0" layoutY="249.0" mnemonicParsing="false" text="Stop" />
+                  <Button layoutX="105.0" layoutY="249.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="PAUSE" size="18" />
+                     </graphic></Button>
+                  <Button layoutX="73.0" layoutY="249.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="PLAY" size="18" />
+                     </graphic></Button>
+                  <Button layoutX="134.0" layoutY="249.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="STOP" size="18" />
+                     </graphic></Button>
                   <Slider layoutX="77.0" layoutY="138.0" />
                   <Slider layoutX="77.0" layoutY="205.0" />
                   <Label layoutX="88.0" layoutY="101.0" style="-fx-text-fill: #DCDCDC;" text="Audio speaker volume">
@@ -25,51 +39,38 @@
                      <font>
                         <Font name="Verdana" size="13.0" />
                      </font></Label>
-                  <Label layoutX="93.0" layoutY="38.0" style="-fx-text-fill: #DCDCDC;" text="Audio player">
+                  <Label layoutX="109.0" layoutY="46.0" style="-fx-text-fill: #DCDCDC;" text="Audio player">
                      <font>
                         <Font name="Verdana" size="18.0" />
                      </font></Label>
-                  <Label layoutX="33.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;" text="min">
+                  <Label layoutX="33.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;">
                      <font>
                         <Font name="Verdana" size="13.0" />
                      </font></Label>
-                  <Label layoutX="234.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;" text="max">
+                  <Label layoutX="234.0" layoutY="137.0" style="-fx-text-fill: #DCDCDC;">
                      <font>
                         <Font name="Verdana" size="13.0" />
                      </font></Label>
-                  <Label layoutX="30.0" layoutY="204.0" style="-fx-text-fill: #DCDCDC;" text="min">
-                     <font>
-                        <Font name="Verdana" size="13.0" />
-                     </font></Label>
-                  <Label layoutX="234.0" layoutY="204.0" style="-fx-text-fill: #DCDCDC;" text="max">
-                     <font>
-                        <Font name="Verdana" size="13.0" />
-                     </font></Label>
-                  <Button layoutX="97.0" layoutY="285.0" mnemonicParsing="false" text="FR" />
-                  <Button layoutX="164.0" layoutY="285.0" mnemonicParsing="false" text="FF" />
+                  <Button layoutX="200.0" layoutY="249.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="FAST_FORWARD" size="18" />
+                     </graphic></Button>
+                  <Button layoutX="166.0" layoutY="249.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="FAST_BACKWARD" size="18" />
+                     </graphic></Button>
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_OFF" layoutX="43.0" layoutY="157.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_UP" layoutX="234.0" layoutY="157.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_UP" layoutX="234.0" layoutY="222.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_OFF" layoutX="43.0" layoutY="222.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="MUSIC" layoutX="49.0" layoutY="71.0" size="40" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="367.0" prefWidth="287.0" style="-fx-background-color: #909090;">
                <children>
-                  <Label layoutX="90.0" layoutY="39.0" style="-fx-text-fill: #DCDCDC;" text="Audio recorder">
+                  <Label layoutX="119.0" layoutY="47.0" style="-fx-text-fill: #DCDCDC;" text="Audio recorder">
                      <font>
                         <Font name="Verdana" size="18.0" />
-                     </font></Label>
-                  <Label layoutX="231.0" layoutY="206.0" style="-fx-text-fill: #DCDCDC;" text="max">
-                     <font>
-                        <Font size="13.0" />
-                     </font></Label>
-                  <Label layoutX="27.0" layoutY="206.0" style="-fx-text-fill: #DCDCDC;" text="min">
-                     <font>
-                        <Font size="13.0" />
-                     </font></Label>
-                  <Label layoutX="231.0" layoutY="139.0" style="-fx-text-fill: #DCDCDC;" text="max">
-                     <font>
-                        <Font size="13.0" />
-                     </font></Label>
-                  <Label layoutX="30.0" layoutY="139.0" style="-fx-text-fill: #DCDCDC;" text="min">
-                     <font>
-                        <Font size="13.0" />
                      </font></Label>
                   <Label layoutX="61.0" layoutY="181.0" style="-fx-text-fill: #DCDCDC;" text="Stereo balance of recorded audio">
                      <font>
@@ -81,34 +82,57 @@
                      </font></Label>
                   <Slider layoutX="74.0" layoutY="207.0" />
                   <Slider layoutX="74.0" layoutY="140.0" />
-                  <Button layoutX="99.0" layoutY="251.0" mnemonicParsing="false" text="Start Recording" />
+                  <Button layoutX="143.0" layoutY="251.0" mnemonicParsing="false">
+                     <graphic>
+                        <FontAwesomeIconView glyphName="MICROPHONE" size="18" />
+                     </graphic></Button>
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_UP" layoutX="239.0" layoutY="157.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_UP" layoutX="242.0" layoutY="222.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_OFF" layoutX="30.0" layoutY="153.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="VOLUME_OFF" layoutX="28.0" layoutY="221.0" size="30" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="MICROPHONE" layoutX="66.0" layoutY="72.0" size="40" />
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
-      <Pane layoutX="12.0" layoutY="20.0">
+      <Pane layoutX="12.0" layoutY="6.0" prefHeight="40.0" prefWidth="576.0">
          <children>
-            <Button mnemonicParsing="false" text="Power" />
-            <Label layoutX="409.0" layoutY="3.0" style="-fx-text-fill: #DCDCDC;" text="Cassette">
+            <Button mnemonicParsing="false">
+               <graphic>
+                  <FontAwesomeIconView glyphName="POWER_OFF" size="18" />
+               </graphic></Button>
+            <Label layoutX="457.0" layoutY="5.0" style="-fx-text-fill: #DCDCDC;" text="Cassette">
                <font>
                   <Font size="13.0" />
                </font></Label>
-            <Button layoutX="49.0" mnemonicParsing="false" text="Eject" />
-            <Button layoutX="471.0" mnemonicParsing="false" text="Insert" />
-            <Button layoutX="517.0" mnemonicParsing="false" text="Remove" />
+            <Button layoutX="41.0" mnemonicParsing="false">
+               <graphic>
+                  <FontAwesomeIconView glyphName="EJECT" size="18" />
+               </graphic></Button>
+            <Button layoutX="512.0" layoutY="1.0" mnemonicParsing="false">
+               <graphic>
+                  <FontAwesomeIconView glyphName="ARROW_DOWN" size="18" />
+               </graphic></Button>
+            <Button layoutX="545.0" layoutY="1.0" mnemonicParsing="false">
+               <graphic>
+                  <FontAwesomeIconView glyphName="REMOVE" size="18" />
+               </graphic></Button>
          </children>
       </Pane>
-      <Pane layoutX="14.0" layoutY="378.0" prefHeight="45.0" prefWidth="566.0">
+      <Pane layoutY="378.0" prefHeight="45.0" prefWidth="600.0">
          <children>
-            <ProgressIndicator layoutX="468.0" layoutY="5.0" progress="0.0" style="-fx-text-fill: DCDCDC;" />
-            <RadioButton disable="true" layoutY="17.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head a" />
-            <Label layoutX="410.0" layoutY="14.0" style="-fx-text-fill: #DCDCDC;" text="Counter">
+            <ProgressIndicator layoutX="519.0" layoutY="11.0" progress="0.0" style="-fx-text-fill: DCDCDC;" />
+            <RadioButton disable="true" layoutX="27.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head a" />
+            <Label layoutX="461.0" layoutY="14.0" style="-fx-text-fill: #DCDCDC;" text="Counter">
                <font>
                   <Font size="13.0" />
                </font></Label>
             <RadioButton disable="true" layoutX="283.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Motor" />
-            <Button layoutX="507.0" layoutY="13.0" mnemonicParsing="false" text="Reset" />
-            <RadioButton disable="true" layoutX="124.0" layoutY="17.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head b" />
+            <Button layoutX="554.0" layoutY="9.0" mnemonicParsing="false">
+               <graphic>
+                  <FontAwesomeIconView glyphName="REFRESH" size="18" />
+               </graphic></Button>
+            <RadioButton disable="true" layoutX="151.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head b" />
          </children>
       </Pane>
    </children>
