--- a/implementation/workspace/cassette-deck/src/main/resources/cdLauncher.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/cdLauncher.fxml
@@ -5,7 +5,8 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="357.0" prefWidth="371.0" style="-fx-background-color: #413E3E;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="357.0" prefWidth="371.0" style="-fx-background-color: #413E3E;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller="controller.Controller">
    <children>
       <Label layoutX="29.0" layoutY="99.0" style="-fx-text-fill: #DCDCDC;" text="Deck type">
          <font>
@@ -35,7 +36,7 @@
             <Font name="Verdana" size="13.0" />
          </font>
       </CheckBox>
-      <Button layoutX="104.0" layoutY="289.0" mnemonicParsing="false" text="Launch">
+      <Button layoutX="104.0" layoutY="289.0" mnemonicParsing="false" text="Launch" fx:id="submitBtn" onAction="#launchButton">
          <font>
             <Font name="Verdana" size="13.0" />
          </font>
