--- a/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
@@ -83,7 +83,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="MUSIC" layoutX="49.0" layoutY="71.0" size="40" />
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="334.0" prefWidth="323.0" style="-fx-background-color: #909090;">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="334.0" prefWidth="323.0" style="-fx-background-color: #909090;" fx:id="audioRecorderP">
                     <children>
                         <Label layoutX="119.0" layoutY="47.0" style="-fx-text-fill: #DCDCDC;" text="Audio recorder">
                             <font>
