--- a/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
@@ -138,7 +138,7 @@
                         <FontAwesomeIconView glyphName="ARROW_DOWN" size="18" />
                     </graphic>
                 </Button>
-                <Button layoutX="545.0" layoutY="1.0" mnemonicParsing="false">
+                <Button layoutX="545.0" layoutY="1.0" mnemonicParsing="false" fx:id="returnBtn" onAction="#returnFn">
                     <graphic>
                         <FontAwesomeIconView glyphName="REMOVE" size="18" />
                     </graphic>
