--- a/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
+++ b/implementation/workspace/cassette-deck/src/main/resources/singleDeck.fxml
@@ -20,11 +20,11 @@
                 <Image url="@img/background.jpg" />
             </image>
         </ImageView>
-        <SplitPane dividerPositions="0.5" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="606.0">
+        <SplitPane dividerPositions="0.5" layoutY="42.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="606.0" fx:id="playerAndRecorderSP">
             <items>
                 <AnchorPane style="-fx-background-color: #909090;">
                     <children>
-                        <Button layoutX="105.0" layoutY="249.0" mnemonicParsing="false">
+                        <Button layoutX="105.0" layoutY="249.0" mnemonicParsing="false" fx:id="pauseBtn" onAction="#pauseFn">
                             <graphic>
                                 <FontAwesomeIconView glyphName="PAUSE" size="18" />
                             </graphic>
@@ -34,13 +34,13 @@
                                 <FontAwesomeIconView glyphName="PLAY" size="18"/>
                             </graphic>
                         </Button>
-                        <Button layoutX="134.0" layoutY="249.0" mnemonicParsing="false">
+                        <Button layoutX="134.0" layoutY="249.0" mnemonicParsing="false" fx:id="stopBtn" onAction="#stopFn">
                             <graphic>
                                 <FontAwesomeIconView glyphName="STOP" size="18" />
                             </graphic>
                         </Button>
-                        <Slider layoutX="77.0" layoutY="138.0" />
-                        <Slider layoutX="77.0" layoutY="205.0" />
+                        <Slider layoutX="77.0" layoutY="138.0" fx:id="volumeS"/>
+                        <Slider layoutX="77.0" layoutY="205.0" fx:id="balanceS"/>
                         <Label layoutX="88.0" layoutY="101.0" style="-fx-text-fill: #DCDCDC;" text="Audio speaker volume">
                             <font>
                                 <Font name="Verdana" size="13.0" />
@@ -66,12 +66,12 @@
                                 <Font name="Verdana" size="13.0" />
                             </font>
                         </Label>
-                        <Button layoutX="200.0" layoutY="249.0" mnemonicParsing="false">
+                        <Button layoutX="200.0" layoutY="249.0" mnemonicParsing="false" fx:id="fastRewindBtn" onAction="#fastRewindFn">
                             <graphic>
                                 <FontAwesomeIconView glyphName="FAST_FORWARD" size="18" />
                             </graphic>
                         </Button>
-                        <Button layoutX="166.0" layoutY="249.0" mnemonicParsing="false">
+                        <Button layoutX="166.0" layoutY="249.0" mnemonicParsing="false" fx:id="fastForwardBtn" onAction="#fastForwardFn">
                             <graphic>
                                 <FontAwesomeIconView glyphName="FAST_BACKWARD" size="18" />
                             </graphic>
@@ -83,7 +83,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="MUSIC" layoutX="49.0" layoutY="71.0" size="40" />
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="334.0" prefWidth="323.0" style="-fx-background-color: #909090;" fx:id="audioRecorderP">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="334.0" prefWidth="323.0" style="-fx-background-color: #909090;">
                     <children>
                         <Label layoutX="119.0" layoutY="47.0" style="-fx-text-fill: #DCDCDC;" text="Audio recorder">
                             <font>
@@ -100,9 +100,9 @@
                                 <Font size="13.0" />
                             </font>
                         </Label>
-                        <Slider layoutX="74.0" layoutY="207.0" />
-                        <Slider layoutX="74.0" layoutY="140.0" />
-                        <Button layoutX="143.0" layoutY="251.0" mnemonicParsing="false">
+                        <Slider layoutX="74.0" layoutY="207.0" fx:id="recordBalanceS"/>
+                        <Slider layoutX="74.0" layoutY="140.0" fx:id="recordVolumeS"/>
+                        <Button layoutX="143.0" layoutY="251.0" mnemonicParsing="false" fx:id="recordBtn" onAction="#recordFn">
                             <graphic>
                                 <FontAwesomeIconView glyphName="MICROPHONE" size="18" />
                             </graphic>
@@ -118,7 +118,7 @@
         </SplitPane>
         <Pane layoutX="5.0" layoutY="6.0" prefHeight="40.0" prefWidth="600.0">
             <children>
-                <Button mnemonicParsing="false">
+                <Button mnemonicParsing="false" fx:id="powerBtn" onAction="#powerFn">
                     <graphic>
                         <FontAwesomeIconView glyphName="POWER_OFF" size="18" />
                     </graphic>
@@ -147,20 +147,20 @@
         </Pane>
         <Pane layoutY="378.0" prefHeight="45.0" prefWidth="606.0">
             <children>
-                <ProgressIndicator layoutX="519.0" layoutY="11.0" progress="0.0" style="-fx-text-fill: DCDCDC;" />
-                <RadioButton disable="true" layoutX="27.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head a" />
+                <ProgressIndicator layoutX="519.0" layoutY="11.0" progress="0.0" style="-fx-text-fill: DCDCDC;" fx:id="progressPI"/>
+                <RadioButton disable="true" layoutX="27.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head a" fx:id="magneticHeadARB" />
                 <Label layoutX="461.0" layoutY="14.0" text="Counter">
                     <font>
                         <Font size="13.0" />
                     </font>
                 </Label>
-                <RadioButton disable="true" layoutX="283.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Motor" />
-                <Button layoutX="554.0" layoutY="9.0" mnemonicParsing="false">
+                <RadioButton disable="true" layoutX="283.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Motor" fx:id="motorRB"/>
+                <Button layoutX="554.0" layoutY="9.0" mnemonicParsing="false" fx:id="refreshBtn">
                     <graphic>
                         <FontAwesomeIconView glyphName="REFRESH" size="18" />
                     </graphic>
                 </Button>
-                <RadioButton disable="true" layoutX="151.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head b" />
+                <RadioButton disable="true" layoutX="151.0" layoutY="15.0" mnemonicParsing="false" style="-fx-text-fill: DCDCDC;" text="Magnetic head b" fx:id="magneticHeadBRB"/>
             </children>
         </Pane>
     </children>
