Add working audio player

--- a/implementation/workspace/cassette-deck/src/main/java/view/doubleDeckEnhanced.fxml
+++ b/implementation/workspace/cassette-deck/src/main/java/view/doubleDeckEnhanced.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.media.MediaView?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SingleCTRL">
    <top>
